--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,12 +27,15 @@
   {% endfor %}
 {% endif %}
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WV09PB2PZT"></script>
+
+{% if jekyll.environment == "production" and site.google_analytics.production %}
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics.production }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-WV09PB2PZT');
+  gtag('config', '{{ site.google_analytics.production }}');
 </script>
+{% endif %}
