--- a/myPj/julia-set/css/d2-style.css
+++ b/myPj/julia-set/css/d2-style.css
@@ -123,7 +123,7 @@ body {
 ------------------------------------------------- */
 #formula {
   margin-top: 20px;
-  font-size: 0.75m;
+  font-size: 0.75rem;
   line-height: 1.5em;
   white-space: pre-wrap;
   text-align: center;
