--- a/myPj/qt-st-visual/partials/qt-navbar.html
+++ b/myPj/qt-st-visual/partials/qt-navbar.html
@@ -1,5 +1,5 @@
+<!-- myPj/qt-st-visual/partials/qt-navbar.html -->
 <nav class="navbar bg-transparent position-fixed w-100">
-<!-- <nav class="navbar navbar-dark bg-dark"> -->
   <div class="container-fluid">
     <!-- <a class="navbar-brand" href="#">Julia Set Inverse Mapping Visualizer</a> -->
     <!-- PC 以上（sm 以上）で表示される長いタイトル -->
