check box plane img

--- a/myPj/qt-st-visual/partials/qt-offcanvas.html
+++ b/myPj/qt-st-visual/partials/qt-offcanvas.html
@@ -17,6 +17,13 @@
 
   <div class="offcanvas-body">
     <form>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="toggle-ground-visibility">
+        <label class="form-check-label" for="toggle-ground-visibility">
+          床画像を表示
+        </label>
+      </div>
+
       <!-- 背景色 (Background Color) -->
       <div class="mb-3">
         <label for="input-bg-color" class="form-label small">背景色</label>
