--- a/myPj/qt-st-visual/partials/qt-offcanvas.html
+++ b/myPj/qt-st-visual/partials/qt-offcanvas.html
@@ -18,7 +18,7 @@
   <div class="offcanvas-body">
     <form>
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="toggle-ground-visibility">
+        <input class="form-check-input" type="checkbox" value="" id="toggle-ground-visibility" checked>
         <label class="form-check-label" for="toggle-ground-visibility">
           床画像を表示
         </label>
