--- a/myPj/qt-st-visual/partials/qt-navbar.html
+++ b/myPj/qt-st-visual/partials/qt-navbar.html
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <!-- <a class="navbar-brand" href="#">Julia Set Inverse Mapping Visualizer</a> -->
     <!-- PC 以上（sm 以上）で表示される長いタイトル -->
-    <a class="navbar-brand d-none d-sm-block text-white" href="#">
-      Julia Set Inverse Mapping Visualizer
+    <a class="navbar-brand d-none d-sm-block text-white fs-6" href="#">
+      Quaternion Rotation Stereographic Projection
     </a>
     <!-- xs（スマホ）でだけ表示される短いタイトル -->
     <a class="navbar-brand d-block d-sm-none text-white fs-6" href="#">
-      Julia Set Visualizer
+      Quaternion Stereo
     </a>
     
     <div class="mx-auto">
