--- a/myPj/qt-st-visual/partials/qt-offcanvas.html
+++ b/myPj/qt-st-visual/partials/qt-offcanvas.html
@@ -131,5 +131,17 @@
         </button>
       </div>
     </form>
+
+    <div class="mt-4 text-center">
+      <a 
+        href="https://uminomae.github.io/pjdhiro/20250531julia/" 
+        class="text-decoration-none text-white small"
+        target="_blank"
+        rel="noopener"
+      >
+      陰陽なJulia集合を逆にたどる
+      </a>
+    </div>
+
   </div>
 </div>
